qt_add_library(FluControls STATIC
	FliListViewItem.cpp
	FliListViewItem.h
	FluAction.cpp
	FluAction.h
	FluAmPmView.cpp
	FluAmPmView.h
	FluAppBarButton.cpp
	FluAppBarButton.h
	FluAppBarToggleButton.cpp
	FluAppBarToggleButton.h
	FluAutoSuggestBox.cpp
	FluAutoSuggestBox.h
	FluBorder.cpp
	FluBorder.h
	FluBusyProgressRing.cpp
	FluBusyProgressRing.h
	FluCalendarDatePicker.cpp
	FluCalendarDatePicker.h
	FluCalendarDef.h
	FluCalendarItem.cpp
	FluCalendarItem.h
	FluCalendarSelectDayView.cpp
	FluCalendarSelectDayView.h
	FluCalendarSelectMonthView.cpp
	FluCalendarSelectMonthView.h
	FluCalendarSelectYearView.cpp
	FluCalendarSelectYearView.h
	FluCalendarView.cpp
	FluCalendarView.h
	FluCalendarViewTitle.cpp
	FluCalendarViewTitle.h
	FluCheckBox.cpp
	FluCheckBox.h
	FluCircleDot.cpp
	FluCircleDot.h
	FluCodeBox.cpp
	FluCodeBox.h
	FluCodeExpander.cpp
	FluCodeExpander.h
	FluColorButton.cpp
	FluColorButton.h
	FluColorFlyout.cpp
	FluColorFlyout.h
	FluColorLabel.cpp
	FluColorLabel.h
	FluColorPickerButton.cpp
	FluColorPickerButton.h
	FluColorView.cpp
	FluColorView.h
	FluColorViewGradient.cpp
	FluColorViewGradient.h
	FluColorViewHHandle.cpp
	FluColorViewHHandle.h
	FluColorViewVHandle.cpp
	FluColorViewVHandle.h
	FluComboBox.cpp
	FluComboBox.h
	FluComboBoxEx.cpp
	FluComboBoxEx.h
	FluComboBoxTextItem.cpp
	FluComboBoxTextItem.h
	FluCommandBar.cpp
	FluCommandBar.h
	FluCommandBarIconItem.cpp
	FluCommandBarIconItem.h
	FluCommandBarIconTextItem.cpp
	FluCommandBarIconTextItem.h
	FluCommandBarItem.cpp
	FluCommandBarItem.h
	FluCommandBarItemType.h
	FluCommandBarSplitItem.cpp
	FluCommandBarSplitItem.h
	FluCompleterMenu.cpp
	FluCompleterMenu.h
	FluConfirmFlyout.cpp
	FluConfirmFlyout.h
	FluDatePicker.cpp
	FluDatePicker.h
	FluDatePickerView.cpp
	FluDatePickerView.h
	FluDatePickerViewMask.cpp
	FluDatePickerViewMask.h
	FluDef.h
	FluDisplayBox.cpp
	FluDisplayBox.h
	FluDisplayBoxEx.cpp
	FluDisplayBoxEx.h
	FluDisplayIconBox.cpp
	FluDisplayIconBox.h
	FluDoubleSpinBox.cpp
	FluDoubleSpinBox.h
	FluDropDownButton.cpp
	FluDropDownButton.h
	FluExpander.cpp
	FluExpander.h
	FluFWScrollView.cpp
	FluFWScrollView.h
	FluFlowLayout.cpp
	FluFlowLayout.h
	FluFrameLessTitleBar.cpp
	FluFrameLessTitleBar.h
	FluFrameLessWidget.cpp
	FluFrameLessWidget.h
	FluFrameLessWidgetEx.cpp
	FluFrameLessWidgetEx.h
	FluGifBox.cpp
	FluGifBox.h
	FluGraphicalButton.cpp
	FluGraphicalButton.h
	FluHCard.cpp
	FluHCard.h
	FluHFlipView.cpp
	FluHFlipView.h
	FluHNavigationFlyIconTextItem.cpp
	FluHNavigationFlyIconTextItem.h
	FluHNavigationIconTextItem.cpp
	FluHNavigationIconTextItem.h
	FluHNavigationItem.cpp
	FluHNavigationItem.h
	FluHNavigationMoreItem.cpp
	FluHNavigationMoreItem.h
	FluHNavigationSearchItem.cpp
	FluHNavigationSearchItem.h
	FluHNavigationSettingsItem.cpp
	FluHNavigationSettingsItem.h
	FluHNavigationView.cpp
	FluHNavigationView.h
	FluHRadioGroupBox.cpp
	FluHRadioGroupBox.h
	FluHScrollView.cpp
	FluHScrollView.h
	FluHSplitLine.cpp
	FluHSplitLine.h
	FluHyperLinkButton.cpp
	FluHyperLinkButton.h
	FluIconButton.cpp
	FluIconButton.h
	FluImageBox.cpp
	FluImageBox.h
	FluIndicatorMenuItemDeleage.cpp
	FluIndicatorMenuItemDeleage.h
	FluIndicatorRoundMenu.cpp
	FluIndicatorRoundMenu.h
	FluInfoBadge.cpp
	FluInfoBadge.h
	FluInfoBarMgr.cpp
	FluInfoBarMgr.h
	FluIntValidator.cpp
	FluIntValidator.h
	FluIntructions.cpp
	FluIntructions.h
	FluLabel.cpp
	FluLabel.h
	FluLineEdit.cpp
	FluLineEdit.h
	FluListView.cpp
	FluListView.h
	FluListViewItemDelegate.cpp
	FluListViewItemDelegate.h
	FluLoopView.cpp
	FluLoopView.h
	FluMSNavigationItem.cpp
	FluMSNavigationItem.h
	FluMSNavigationView.cpp
	FluMSNavigationView.h
	FluMSWindow.cpp
	FluMSWindow.h
	FluMenu.cpp
	FluMenu.h
	FluMenuAniMgr.cpp
	FluMenuAniMgr.h
	FluMenuAniType.h
	FluMenuBar.cpp
	FluMenuBar.h
	FluMenuItemDelegate.cpp
	FluMenuItemDelegate.h
	FluMessageBox.cpp
	FluMessageBox.h
	FluPPushButton.cpp
	FluPPushButton.h
	FluPagination.cpp
	FluPagination.h
	FluPaginationItem.cpp
	FluPaginationItem.h
	FluPasswordBox.cpp
	FluPasswordBox.h
	FluPivot.cpp
	FluPivot.h
	FluPivotTitleBar.cpp
	FluPivotTitleBar.h
	FluPivotTitleBarItem.cpp
	FluPivotTitleBarItem.h
	FluProgressBar.cpp
	FluProgressBar.h
	FluProgressRing.cpp
	FluProgressRing.h
	FluPushButton.cpp
	FluPushButton.h
	FluRadioButton.cpp
	FluRadioButton.h
	FluRatingControl.cpp
	FluRatingControl.h
	FluRepeatButton.cpp
	FluRepeatButton.h
	FluRotationButton.cpp
	FluRotationButton.h
	FluRoundMenu.cpp
	FluRoundMenu.h
	FluRoundMenuView.cpp
	FluRoundMenuView.h
	FluScaleButton.cpp
	FluScaleButton.h
	FluScrollArea.cpp
	FluScrollArea.h
	FluScrollBar.cpp
	FluScrollBar.h
	FluScrollBarArrowButton.cpp
	FluScrollBarArrowButton.h
	FluScrollBarHandle.cpp
	FluScrollBarHandle.h
	FluScrollBarTrunk.cpp
	FluScrollBarTrunk.h
	FluScrollDelegate.cpp
	FluScrollDelegate.h
	FluSearchLineEdit.cpp
	FluSearchLineEdit.h
	FluSegmented.cpp
	FluSegmented.h
	FluSegmentedItem.cpp
	FluSegmentedItem.h
	FluSettingsLabelBox.cpp
	FluSettingsLabelBox.h
	FluSettingsSelectBox.cpp
	FluSettingsSelectBox.h
	FluSettingsVersionBox.cpp
	FluSettingsVersionBox.h
	FluShortInfoBar.cpp
	FluShortInfoBar.h
	FluShortcutMenuItemDelegate.cpp
	FluShortcutMenuItemDelegate.h
	FluShortcutPicker.cpp
	FluShortcutPicker.h
	FluShortcutPickerDlg.cpp
	FluShortcutPickerDlg.h
	FluSlider.cpp
	FluSlider.h
	FluSpinBox.cpp
	FluSpinBox.h
	FluSplitButton.cpp
	FluSplitButton.h
	FluStackedLayout.cpp
	FluStackedLayout.h
	FluStar.cpp
	FluStar.h
	FluStyleButton.cpp
	FluStyleButton.h
	FluSubMenuItemWidget.cpp
	FluSubMenuItemWidget.h
	FluSystemTrayIcon.cpp
	FluSystemTrayIcon.h
	FluSystemTrayMenu.cpp
	FluSystemTrayMenu.h
	FluTabBar.cpp
	FluTabBar.h
	FluTabBarContent.cpp
	FluTabBarContent.h
	FluTabBarItem.cpp
	FluTabBarItem.h
	FluTabView.cpp
	FluTabView.h
	FluTabWidget.cpp
	FluTabWidget.h
	FluTableItemDelegate.cpp
	FluTableItemDelegate.h
	FluTableView.cpp
	FluTableView.h
	FluTeachingTip.cpp
	FluTeachingTip.h
	FluTeachingTipContent.cpp
	FluTeachingTipContent.h
	FluTerminalWidget.cpp
	FluTerminalWidget.h
	FluTextEdit.cpp
	FluTextEdit.h
	FluTextEditWrap.cpp
	FluTextEditWrap.h
	FluTextToggleSwitchEx.cpp
	FluTextToggleSwitchEx.h
	FluThemeButton.cpp
	FluThemeButton.h
	FluThread.cpp
	FluThread.h
	FluTimeLine.cpp
	FluTimeLine.h
	FluTimeLineIcon.cpp
	FluTimeLineIcon.h
	FluTimeLineItem.cpp
	FluTimeLineItem.h
	FluTimePicker24H.cpp
	FluTimePicker24H.h
	FluTimePicker24HView.cpp
	FluTimePicker24HView.h
	FluTimePickerAP.cpp
	FluTimePickerAP.h
	FluTimePickerAPView.cpp
	FluTimePickerAPView.h
	FluTimePickerViewMask.cpp
	FluTimePickerViewMask.h
	FluToggleButton.cpp
	FluToggleButton.h
	FluToggleSwitch.cpp
	FluToggleSwitch.h
	FluToggleSwitchEx.cpp
	FluToggleSwitchEx.h
	FluTreeView.cpp
	FluTreeView.h
	FluTreeViewItemDelegate.cpp
	FluTreeViewItemDelegate.h
	FluTriangle.cpp
	FluTriangle.h
	FluVCard.cpp
	FluVCard.h
	FluVFlipView.cpp
	FluVFlipView.h
	FluVFlyout.cpp
	FluVFlyout.h
	FluVNavigationFlyIconTextItem.cpp
	FluVNavigationFlyIconTextItem.h
	FluVNavigationIconTextItem.cpp
	FluVNavigationIconTextItem.h
	FluVNavigationItem.cpp
	FluVNavigationItem.h
	FluVNavigationMenuItem.cpp
	FluVNavigationMenuItem.h
	FluVNavigationSearchItem.cpp
	FluVNavigationSearchItem.h
	FluVNavigationSettingsItem.cpp
	FluVNavigationSettingsItem.h
	FluVNavigationView.cpp
	FluVNavigationView.h
	FluVRadioGroupBox.cpp
	FluVRadioGroupBox.h
	FluVScrollView.cpp
	FluVScrollView.h
	FluVSplitLine.cpp
	FluVSplitLine.h
	FluValueObject.cpp
	FluValueObject.h
	FluWidget.cpp
	FluWidget.h
	FluWindowKitTitleBar.cpp
	FluWindowKitTitleBar.h
	FluWindowKitWidget.cpp
	FluWindowKitWidget.h
	FluWindowkitButton.cpp
	FluWindowkitButton.h
)

target_compile_definitions(FluControls PRIVATE USE_QRC)
target_link_libraries(FluControls PUBLIC
    FluUtils
    qwindowkit
    Qt::Core
	Qt::Gui
	Qt::Widgets
	Qt::Svg
)